--- a/src/CodePunk.Core/CodePunk.Core.csproj
+++ b/src/CodePunk.Core/CodePunk.Core.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.8" />
   </ItemGroup>
 
 </Project>
