--- a/src/CodePunk.Console/appsettings.json
+++ b/src/CodePunk.Console/appsettings.json
@@ -8,6 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=codepunk.db"
   },
+  "OpenAI": {
+    "ApiKey": "",
+    "DefaultModel": "gpt-4o",
+    "MaxTokens": 4096,
+    "Temperature": 0.7
+  },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
     "MinimumLevel": {
