Add claude support

--- a/src/CodePunk.Console/appsettings.Development.json
+++ b/src/CodePunk.Console/appsettings.Development.json
@@ -9,5 +9,23 @@
     "MinimumLevel": {
       "Default": "Debug"
     }
+  },
+  "AI": {
+    "DefaultProvider": "anthropic",
+    "Providers": {
+      "OpenAI": {
+        "ApiKey": "your-openai-key-here",
+        "DefaultModel": "gpt-4o",
+        "MaxTokens": 4096,
+        "Temperature": 0.7
+      },
+      "Anthropic": {
+        "ApiKey": "your-anthropic-key-here",
+        "DefaultModel": "claude-3-5-sonnet-20241022",
+        "MaxTokens": 4096,
+        "Temperature": 0.7,
+        "Version": "2023-06-01"
+      }
+    }
   }
 }
