--- a/src/CodePunk.Console/appsettings.json
+++ b/src/CodePunk.Console/appsettings.json
@@ -8,11 +8,23 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=codepunk.db"
   },
-  "OpenAI": {
-    "ApiKey": "",
-    "DefaultModel": "gpt-4o",
-    "MaxTokens": 4096,
-    "Temperature": 0.7
+  "AI": {
+    "DefaultProvider": "openai",
+    "Providers": {
+      "OpenAI": {
+        "ApiKey": "",
+        "DefaultModel": "gpt-4o",
+        "MaxTokens": 4096,
+        "Temperature": 0.7
+      },
+      "Anthropic": {
+        "ApiKey": "",
+        "DefaultModel": "claude-3-5-sonnet-20241022",
+        "MaxTokens": 4096,
+        "Temperature": 0.7,
+        "Version": "2023-06-01"
+      }
+    }
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
