--- a/src/CodePunk.Core/CodePunk.Core.csproj
+++ b/src/CodePunk.Core/CodePunk.Core.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
     <PackageReference Include="System.Net.Http.Json" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
