--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal --logger trx
+      run: dotnet test --no-build --verbosity normal --logger trx --results-directory "TestResults"
     - name: Dotnet Test Reporter
       uses: bibipkins/dotnet-test-reporter@v1.5.4
       with:
-        results-path: '**/TestResults.trx'
+        results-path: 'TestResults/**/*.trx'
