--- a/src/CodePunk.Console/CodePunk.Console.csproj
+++ b/src/CodePunk.Console/CodePunk.Console.csproj
@@ -12,9 +12,13 @@
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
+  <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.50.0" />
+  <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+  <PackageReference Include="OpenTelemetry" Version="1.8.1" />
+  <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1" />
+  <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.8.1" />
   </ItemGroup>
 
   <ItemGroup>
