--- a/src/CodePunk.Infrastructure/CodePunk.Infrastructure.csproj
+++ b/src/CodePunk.Infrastructure/CodePunk.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
+  <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.1.0" />
   </ItemGroup>
 
   <ItemGroup>
