--- a/tests/CodePunk.Console.Tests/CodePunk.Console.Tests.csproj
+++ b/tests/CodePunk.Console.Tests/CodePunk.Console.Tests.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageReference Include="Spectre.Console" Version="0.50.0" />
+    <PackageReference Include="Spectre.Console.Testing" Version="0.50.0" />
   </ItemGroup>
 
   <ItemGroup>
