--- a/tests/CodePunk.Console.Tests/CodePunk.Console.Tests.csproj
+++ b/tests/CodePunk.Console.Tests/CodePunk.Console.Tests.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+  <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
     <AssemblyName>CodePunk.Console.Tests</AssemblyName>
