feat(plan-ai): token usage, truncation limits, config externalization, tests

--- a/src/CodePunk.Console/appsettings.json
+++ b/src/CodePunk.Console/appsettings.json
@@ -52,5 +52,13 @@
         }
       }
     ]
+  },
+  "PlanAI": {
+    "MaxFiles": 20,
+    "MaxPathLength": 260,
+    "MaxPerFileBytes": 16384,
+    "MaxTotalBytes": 131072,
+    "RetryInvalidOutput": 1,
+    "SecretPatterns": ["API_KEY=", "SECRET=", "PASSWORD=", "-----BEGIN"]
   }
 }
