--- a/src/CodePunk.Console/CodePunk.Console.csproj
+++ b/src/CodePunk.Console/CodePunk.Console.csproj
@@ -4,6 +4,19 @@
     <OutputType>Exe</OutputType>
     <AssemblyName>CodePunk.Console</AssemblyName>
     <RootNamespace>CodePunk.Console</RootNamespace>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>codepunk</ToolCommandName>
+    <PackageId>CodePunk.CLI</PackageId>
+    <PackageTags>cli;ai;chat;codepunk</PackageTags>
+    <PackageProjectUrl>https://github.com/neil-gilbert/CodePunk</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/neil-gilbert/CodePunk</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Authors>Neil Gilbert</Authors>
+    <Description>CodePunk interactive AI console tool.</Description>
+    <IncludeSymbols>false</IncludeSymbols>
+    <PublishSingleFile>false</PublishSingleFile>
+    <PublishTrimmed>false</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
