--- a/src/CodePunk.Console/CodePunk.Console.csproj
+++ b/src/CodePunk.Console/CodePunk.Console.csproj
@@ -17,6 +17,10 @@
     <IncludeSymbols>false</IncludeSymbols>
     <PublishSingleFile>false</PublishSingleFile>
     <PublishTrimmed>false</PublishTrimmed>
+    <Version>0.1.0-alpha.1</Version>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <InformationalVersion>0.1.0-alpha.1</InformationalVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(EnableTrimming)' == 'true'">
