Improve shell tools

--- a/src/CodePunk.Console/appsettings.json
+++ b/src/CodePunk.Console/appsettings.json
@@ -60,5 +60,10 @@
     "MaxTotalBytes": 131072,
     "RetryInvalidOutput": 1,
     "SecretPatterns": ["API_KEY=", "SECRET=", "PASSWORD=", "-----BEGIN"]
+  },
+  "Shell": {
+    "EnableCommandValidation": true,
+    "AllowedCommands": [],
+    "BlockedCommands": []
   }
 }
