CP16: Add Git-based checkpointing system
Implement comprehensive checkpointing system that enables file state snapshots and restoration:

Core Implementation:
- CheckpointService with shadow Git repository pattern for tracking file changes
- GitCommandExecutor for shell-based git operations (zero external dependencies)
- Result types (CheckpointResult<T>) for explicit error handling
- CheckpointMetadata for storing checkpoint information with JSON serialization

Tools & Commands:
- RestoreCheckpointTool for AI-driven checkpoint restoration
- /checkpoints command to list available checkpoints in table format
- /restore command to restore files to previous checkpoint state

Configuration & DI:
- CheckpointOptions with configurable max checkpoints and auto-pruning
- ICheckpointService interface for loose coupling
- Full dependency injection setup in ServiceCollectionExtensions
- Configuration section in appsettings.json

Testing:
- 7 comprehensive CheckpointService component tests
- 3 RestoreCheckpointTool component tests
- All tests passing with TDD approach

The system uses SHA256 hashing for unique project identification and stores checkpoints in ~/.codepunk/checkpoints with metadata as JSON files.

--- a/src/CodePunk.Console/appsettings.json
+++ b/src/CodePunk.Console/appsettings.json
@@ -65,5 +65,10 @@
     "EnableCommandValidation": true,
     "AllowedCommands": [],
     "BlockedCommands": []
+  },
+  "Checkpointing": {
+    "Enabled": true,
+    "MaxCheckpoints": 100,
+    "AutoPrune": true
   }
 }
