CP17: Add shadow git

--- a/src/CodePunk.Console/appsettings.json
+++ b/src/CodePunk.Console/appsettings.json
@@ -65,5 +65,17 @@
     "EnableCommandValidation": true,
     "AllowedCommands": [],
     "BlockedCommands": []
+  },
+  "GitSession": {
+    "Enabled": true,
+    "AutoStartSession": true,
+    "BranchPrefix": "ai/session",
+    "StashUncommittedChanges": true,
+    "DefaultCommitMessageTemplate": "AI Session: {summary}",
+    "SessionTimeoutMinutes": 30,
+    "AutoRevertOnTimeout": true,
+    "CleanupOrphanedSessionsOnStartup": true,
+    "KeepFailedSessionBranches": false,
+    "StateStorePath": "~/.codepunk/git-sessions"
   }
 }
