Implement git worktree-based session isolation
- Replace shadow branch checkout with isolated git worktrees
- Remove all stash logic (no longer needed with worktrees)
- Update IWorkingDirectoryProvider with SetWorkingDirectory and GetOriginalDirectory
- Change IWorkingDirectoryProvider registration from Singleton to Scoped
- Add WorktreePath to GitSessionState (removed StashId)
- Add WorktreeBasePath option to GitSessionOptions
- Implement patch-based AcceptSessionAsync using git diff/apply
- Update all tests for worktree behavior
- Add workingDirectory parameter to IGitCommandExecutor

Benefits:
- Complete workspace isolation (user files never touched during AI sessions)
- Crash-safe (no orphaned branches or dirty workspaces)
- No stashing complexity
- Editor-safe (no branch switching in user workspace)

--- a/src/CodePunk.Console/appsettings.json
+++ b/src/CodePunk.Console/appsettings.json
@@ -20,8 +20,8 @@
       "Anthropic": {
         "ApiKey": "",
         "DefaultModel": "claude-3-5-sonnet-20241022",
-        "MaxTokens": 4096,
-        "Temperature": 0.7,
+        "MaxTokens": 2048,
+        "Temperature": 0.4,
         "Version": "2023-06-01"
       }
     }
@@ -70,7 +70,7 @@
     "Enabled": true,
     "AutoStartSession": true,
     "BranchPrefix": "ai/session",
-    "StashUncommittedChanges": true,
+    "WorktreeBasePath": "",
     "DefaultCommitMessageTemplate": "AI Session: {summary}",
     "SessionTimeoutMinutes": 30,
     "AutoRevertOnTimeout": true,
