--- a/src/CodePunk.Core/CodePunk.Core.csproj
+++ b/src/CodePunk.Core/CodePunk.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
     <PackageReference Include="DiffPlex" Version="1.9.0" />
     <PackageReference Include="Spectre.Console" Version="0.50.0" />
+    <PackageReference Include="Polly" Version="7.2.3" />
   </ItemGroup>
 
   <ItemGroup>
